# skypro

./: README.md  main.py  my_tasks.py  pyproject.toml  requirements.txt  sample.py
src/: code.py  masks.py  processing.py  taxes.py  widget.py
tests/: test_code.py  test_sample.py  test_taxes.py
