[tool.mypy]
disallow_untyped_defs = true
warn_return_any = true
check_untyped_defs = true
exclude = 'venv'

[tool.black]
line-length = 119
exclude = '''
(
  /(
      \.git
  )/
)
'''

[tool.isort]
line_length = 119
multi_line_output = 3

[tool.poetry]
name = "skypro-homework-project"
version = "0.1.0"
description = ""
authors = ["Lolomyn <61377364+Lolomyn@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.lint.dependencies]
mypy = "^1.13.0"
flake8 = "^7.1.1"
black = "^24.10.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
